  Test::More and the duplicates in t/testtools.pl will be removed
- the convert, crop, rotate, copy, matrix_transform, to_paletted, to_rgb8, 
  scaleX and scaleY methods now warn when called in void context.
  http://rt.cpan.org/NoAuth/Bug.html?id=9672
- correct email addresses in the README file, and include bug reporting
  information there too
- added README for samples directory, describes interleave.pl and 
  anaglyph.pl to start.
- the XS for the internal i_glin() function wasn't copying the pixel
  values across to the returned color objects.
  http://rt.cpan.org/NoAuth/Bug.html?id=11860 
- Imager::Cookbook wasn't included in the MANIFEST
- added samp-form.cgi and samp-image.cgi to the samples directory to 
  demonstrate displaying a generated image on a HTML page.
- Makefile.PL now adds rules to generate a suitable META.yml to the
  generated Makefile.
- added sample code for handling images uploaded via a HTML form.
- saving a GIMP gradiant file with Imager::Fountain->save has always been
  broken.  Fixed it and added tests.
- newer versions of GIMP add a line to gradient files before the
  segment count giving a descriptive name of the gradient.  
  Imager::Fountain can now read and write such gradient files.  The
  interface is a bit indirect, but I'd like to preserve
  Imager::Fountain as a blessed array ref for now.
- the segments parameter supplied to the fountain filter and the
  fountain fill contructor now accepts color names or other 
  descriptions as other functions do.
- fix a few compiler warnings
- document the Imager::Font::BBox advance_width() method
- Imager::Font::BBox advance_width() method was falling back to
  the wrong value when the font driver's low level function
  didn't return the advance width.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
